[project]
name = "inboxpilot"
version = "0.1.0"
description = "OpenEnv-compatible email triage environment for AI agents"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic",
    "openai",
    "requests"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"